# Data-extractor

./: README.md  mypy.ini  pyproject.toml
data/: test_bad_headers.csv  test_valid.csv
docs/: api.rst  conf.py
docs/source/: conf.py  index.rst
output/quartet/: series_1.json  series_3.json
src/: acquire.py  csv_extract.py  hello_world.py  model.py
src/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/quartet/: series_2.json  series_4.json
tests/: enviroment.py  test_acquire_cli.py  test_builders.py  test_extract.py  test_model.py
tests/features/: acquire.feature  csv_extract.feature  hello_world.feature
tests/features/steps/: acquire_steps.py  csv_extract_steps.py
