[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "Data-Extractor"
version = "1.0.0"
authors = [{ name = "Uche", email = "uchepibe@gmail.com" }]

description = "Data Extractor for csv files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
[project.optional-dependencies]
testdev = [
    # Development tools to work on this project
    "pytest==9.0.3",
    "sphinx==9.1.0",
]
test = [
    # Testing tools to test this project
    "pytest==9.0.3",
    "tox==4.53.0",
    "behave==1.3.3",
]